# container_craft

./: .gitignore  LICENCE.md  README.md  container_craft.py  mcpkg.py  pyproject.toml  run_tests.py
container_craft/: cli.py
container_craft/commands/: __init__.py  build.py  checkout.py  console.py  info.py  logs.py  menu.py  runner.py  shell.py
container_craft/modloaders/: fabric.py  forge.py  mc_loader_manager.py  neoforge.py  paper.py  velocity.py
container_craft/templates/: modloader_dockerfile_template.j2
container_craft_core/: __init__.py  cache.py  docker.py  env.py  error_handler.py  logger.py  ssh_agent.py
container_craft_core/config/: context.py  layers.py  schema_validator.py
container_craft_core/config/lint/: container_craft_schema.json  container_craft_schema.yml
docs/: env.md  mcpkg.md
examples/mc_jimmer_fabric_server/: README.md  entrypoint.sh  mc_jimmer_fabric.yml
examples/mc_jimmer_fabric_server/config/: server.properties
mcpkg/: cli.py  code_names .py  mcpkg_entry.py
mcpkg/commands/: __init__.py  mcpkg_abstract_commands.py  search.py
mcpkg/plugins/: .mc_mod_manager.py.kate-swp  __init__.py  api.py  curse_forge.py  ftb.py  hangar.py  mc_mod_manager.py  modrith.py
tests/: test.yml
