[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "container-craft"
version = "0.1.0"
description = "A modular Minecraft server orchestration tool and package manager"
authors = [
    { name="m_jimmer", email="josephjamesmills@gmail.com" }
]
readme = "README.md"
license = { file = "LICENCE.md" }

dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.18.0",
    "gitpython>=3.1.31",
    "httpx>=0.25.0",
    "docker>=6.1.3",
    "kconfiglib>=14.1.0",
    "jinja2>=3.1.2",
    "msgpack>=1.0.5",
    "zstandard>=0.22.0"
]

requires-python = ">=3.8"

# later for tests and what-not
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.6"
]

[project.scripts]
container-craft = "container_craft:main"
mcpkg = "mcpkg:main"

[tool.pytest.ini_options]
pythonpath = ["."]
